# Image-Matrix-and-Filter

./: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  adafruit_test.py  client.cpp  cmake_install.cmake  global.h  image_filter_parallel.cpp  image_filter_sequential.cpp  image_filter_sequential.hpp  main.cpp  test.py  udp_server.cpp  utils.cpp  utils.hpp  webcam_test  webcam_test.cpp  webcam_test.hpp
arduino/: a.out  array.txt  create_array.sh  main.c  sketch.c
image_filter/: image_filter.cbp  image_filter.depend  main.cpp
pi/: CMakeCache.txt  CMakeLists.txt  Makefile  a.out  client.cpp  client.hpp  client_test.c  cmake_install.cmake  global.cpp  global.hpp  image_filter_sequential.cpp  image_filter_sequential.hpp  main  main.cpp  utils.cpp  utils_singlethread.cpp
server/: CMakeCache.txt  CMakeLists.txt  Makefile  client.cpp  cmake_install.cmake  global.hpp  image_filter_parallel.cpp  image_filter_parallel.hpp  main  main.cpp  server.cpp  server.hpp  utils.cpp  utils.hpp  utils_singlethread.cpp
tcp_test/: client  client.c  server  server.c
